Bug 1411152 - Serialize MediaRecorder::Session::GatherBlob calls. r=bryce

Differential Revision: https://phabricator.services.mozilla.com/D41591

--HG--
extra : moz-landing-system : lando